@@ -1,7 +1,5 @@
 package uk.gov.ida.hub.config.data;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import org.junit.Before;
 import org.junit.Test;
 import uk.gov.ida.hub.config.domain.IdentityProviderConfig;
@@ -11,6 +9,7 @@ import uk.gov.ida.hub.config.domain.builders.IdentityProviderConfigDataBuilder;
 import uk.gov.ida.hub.config.domain.builders.TransactionConfigBuilder;
 import uk.gov.ida.hub.config.exceptions.ConfigValidationException;
 
+import java.util.List;
 import java.util.Set;
 
 import static java.util.Arrays.asList;
@@ -22,16 +21,16 @@ public class LevelsOfAssuranceConfigValidatorTest {
     private LevelsOfAssuranceConfigValidator levelsOfAssuranceConfigValidator;
 
     private final IdentityProviderConfig loa1And2Idp = IdentityProviderConfigDataBuilder.anIdentityProviderConfigData()
-            .withSupportedLevelsOfAssurance(ImmutableList.of(LevelOfAssurance.LEVEL_1, LevelOfAssurance.LEVEL_2))
+            .withSupportedLevelsOfAssurance(List.of(LevelOfAssurance.LEVEL_1, LevelOfAssurance.LEVEL_2))
             .build();
     private final IdentityProviderConfig loa1Idp = IdentityProviderConfigDataBuilder.anIdentityProviderConfigData()
-            .withSupportedLevelsOfAssurance(ImmutableList.of(LevelOfAssurance.LEVEL_1))
+            .withSupportedLevelsOfAssurance(List.of(LevelOfAssurance.LEVEL_1))
             .build();
     private final IdentityProviderConfig loa2Idp = IdentityProviderConfigDataBuilder.anIdentityProviderConfigData()
-            .withSupportedLevelsOfAssurance(ImmutableList.of(LevelOfAssurance.LEVEL_2))
+            .withSupportedLevelsOfAssurance(List.of(LevelOfAssurance.LEVEL_2))
             .build();
     private final IdentityProviderConfig loa1To3Idp = IdentityProviderConfigDataBuilder.anIdentityProviderConfigData()
-            .withSupportedLevelsOfAssurance(ImmutableList.of(LevelOfAssurance.LEVEL_1, LevelOfAssurance.LEVEL_2, LevelOfAssurance.LEVEL_3))
+            .withSupportedLevelsOfAssurance(List.of(LevelOfAssurance.LEVEL_1, LevelOfAssurance.LEVEL_2, LevelOfAssurance.LEVEL_3))
             .build();
 
     private final TransactionConfig loa1OnlyTransaction = TransactionConfigBuilder.aTransactionConfigData()
@@ -57,25 +56,25 @@ public class LevelsOfAssuranceConfigValidatorTest {
 
     @Test
     public void checkIDPConfigIsWithinVerifyPolicyLevelsOfAssurance() {
-        Set<IdentityProviderConfig> identityProviderConfig = ImmutableSet.of(loa1And2Idp);
+        Set<IdentityProviderConfig> identityProviderConfig = Set.of(loa1And2Idp);
         levelsOfAssuranceConfigValidator.validateAllIDPsSupportLOA1orLOA2(identityProviderConfig);
     }
 
     @Test
     public void shouldAllowSingleLevelOfAssurance() {
-        Set<IdentityProviderConfig> identityProviderConfig = ImmutableSet.of(loa1Idp);
+        Set<IdentityProviderConfig> identityProviderConfig = Set.of(loa1Idp);
         levelsOfAssuranceConfigValidator.validateAllIDPsSupportLOA1orLOA2(identityProviderConfig);
     }
 
     @Test(expected = ConfigValidationException.class)
     public void checkValidationThrowsExceptionWhenIDPSupportsAnLOAThatIsOutsideVerifyPolicyLevelsOfAssurance() {
-        Set<IdentityProviderConfig> identityProviderConfig = ImmutableSet.of(loa1To3Idp);
+        Set<IdentityProviderConfig> identityProviderConfig = Set.of(loa1To3Idp);
         levelsOfAssuranceConfigValidator.validateAllIDPsSupportLOA1orLOA2(identityProviderConfig);
     }
 
     @Test
     public void shouldAllowLOA1TransactionConfiguration() {
-        Set<TransactionConfig> transactionsConfig = ImmutableSet.of(loa1And2Transaction);
+        Set<TransactionConfig> transactionsConfig = Set.of(loa1And2Transaction);
         try {
             levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(transactionsConfig);
         } catch (Exception e) {
@@ -85,7 +84,7 @@ public class LevelsOfAssuranceConfigValidatorTest {
 
     @Test
     public void shouldAllowLOA2TransactionConfiguration() {
-        Set<TransactionConfig> transactionsConfig = ImmutableSet.of(loa2Transaction);
+        Set<TransactionConfig> transactionsConfig = Set.of(loa2Transaction);
         try {
             levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(transactionsConfig);
         } catch(Exception e) {
@@ -95,31 +94,31 @@ public class LevelsOfAssuranceConfigValidatorTest {
 
     @Test (expected = ConfigValidationException.class)
     public void shouldThrowWhenTransactionIsLoa1Only() {
-        levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(ImmutableSet.of(loa1OnlyTransaction));
+        levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(Set.of(loa1OnlyTransaction));
     }
 
     @Test (expected = ConfigValidationException.class)
     public void shouldThrowWhenTransactionIsNotLoa1OrLoa2() {
-        levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(ImmutableSet.of(loa3OnlyTransaction));
+        levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(Set.of(loa3OnlyTransaction));
     }
 
     @Test (expected = ConfigValidationException.class)
     public void shouldThrowWhenTransactionLOAsAreInWrongOrder() {
-        levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(ImmutableSet.of(loa2And1Transaction));
+        levelsOfAssuranceConfigValidator.validateAllTransactionsAreLOA1OrLOA2(Set.of(loa2And1Transaction));
     }
 
     @Test (expected = ConfigValidationException.class)
     public void shouldThrowWhenOneIdpDoesNotSupportATransaction(){
-        Set<IdentityProviderConfig> identityProviderConfig = ImmutableSet.of(loa1Idp, loa2Idp);
-        Set<TransactionConfig> transactionsConfig = ImmutableSet.of(loa2Transaction);
+        Set<IdentityProviderConfig> identityProviderConfig = Set.of(loa1Idp, loa2Idp);
+        Set<TransactionConfig> transactionsConfig = Set.of(loa2Transaction);
 
         levelsOfAssuranceConfigValidator.validateAllTransactionsAreSupportedByIDPs(identityProviderConfig, transactionsConfig);
     }
 
     @Test
     public void shouldNotThrowWhenAllIdpsSupportATransaction(){
-        Set<IdentityProviderConfig> identityProviderConfig = ImmutableSet.of(loa2Idp, loa1And2Idp);
-        Set<TransactionConfig> transactionsConfig = ImmutableSet.of(loa2Transaction);
+        Set<IdentityProviderConfig> identityProviderConfig = Set.of(loa2Idp, loa1And2Idp);
+        Set<TransactionConfig> transactionsConfig = Set.of(loa2Transaction);
 
         try {
             levelsOfAssuranceConfigValidator.validateAllTransactionsAreSupportedByIDPs(identityProviderConfig, transactionsConfig);
@@ -130,14 +129,14 @@ public class LevelsOfAssuranceConfigValidatorTest {
 
     @Test
     public void shouldNotThrowWhenAnIdpsIsOnboardingAndDoesNotSupportATransaction(){
-        Set<TransactionConfig> transactionsConfig = ImmutableSet.of(loa1And2Transaction);
+        Set<TransactionConfig> transactionsConfig = Set.of(loa1And2Transaction);
 
         final IdentityProviderConfig onboardingIdp = IdentityProviderConfigDataBuilder.anIdentityProviderConfigData()
-                .withOnboarding(ImmutableList.of("some-other-transaction-id"))
-                .withSupportedLevelsOfAssurance(ImmutableList.of(LevelOfAssurance.LEVEL_3))
+                .withOnboarding(List.of("some-other-transaction-id"))
+                .withSupportedLevelsOfAssurance(List.of(LevelOfAssurance.LEVEL_3))
                 .build();
 
-        Set<IdentityProviderConfig> identityProviderConfig = ImmutableSet.of(onboardingIdp, loa1And2Idp);
+        Set<IdentityProviderConfig> identityProviderConfig = Set.of(onboardingIdp, loa1And2Idp);
 
         try {
             levelsOfAssuranceConfigValidator.validateAllTransactionsAreSupportedByIDPs(identityProviderConfig, transactionsConfig);
