@@ -1,6 +1,5 @@
 package uk.gov.ida.hub.config.exceptions;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Test;
 import uk.gov.ida.hub.config.domain.CertificateUse;
 import uk.gov.ida.hub.config.domain.IdentityProviderConfig;
@@ -70,7 +69,7 @@ public class ConfigValidationExceptionTest {
 
     @Test
     public void createIncompatiblePairsOfTransactionsAndIDPs() throws Exception {
-        Map<TransactionConfig, List<IdentityProviderConfig>> incompatiblePairs = ImmutableMap.of(aTransactionConfigData().build(), singletonList(anIdentityProviderConfigData().build()));
+        Map<TransactionConfig, List<IdentityProviderConfig>> incompatiblePairs = Map.of(aTransactionConfigData().build(), singletonList(anIdentityProviderConfigData().build()));
         ConfigValidationException exception = ConfigValidationException.createIncompatiblePairsOfTransactionsAndIDPs(incompatiblePairs);
         assertThat(exception.getMessage()).isEqualTo("Transaction unsupported by IDP(s).\n" +
                 "Transaction: default-transaction-entity-id\n" +
