@@ -1,7 +1,6 @@
 package uk.gov.ida.hub.policy.domain.controller;
 
 import com.google.common.base.Optional;
-import com.google.common.collect.ImmutableList;
 import org.joda.time.Duration;
 import org.junit.Before;
 import org.junit.Test;
@@ -43,8 +42,10 @@ import uk.gov.ida.hub.policy.services.AttributeQueryService;
 import uk.gov.ida.hub.policy.validators.LevelOfAssuranceValidator;
 
 import java.net.URI;
+import java.util.List;
 
 import static java.text.MessageFormat.format;
+import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -122,7 +123,7 @@ public class Cycle3MatchRequestSentStateControllerTest {
         ArgumentCaptor<EventSinkHubEvent> eventSinkArgumentCaptor = ArgumentCaptor.forClass(EventSinkHubEvent.class);
         URI userAccountCreationUri = URI.create("a-test-user-account-creation-uri");
         Cycle3MatchRequestSentState state = aCycle3MatchRequestSentState().build();
-        ImmutableList<UserAccountCreationAttribute> userAccountCreationAttributes = ImmutableList.of(UserAccountCreationAttribute.DATE_OF_BIRTH);
+        List<UserAccountCreationAttribute> userAccountCreationAttributes = List.of(UserAccountCreationAttribute.DATE_OF_BIRTH);
         String transactionEntityId = "request issuer id";
         when(transactionsConfigProxy.getUserAccountCreationAttributes(transactionEntityId)).thenReturn(userAccountCreationAttributes);
         when(matchingServiceConfigProxy.getMatchingService(anyString()))
@@ -156,7 +157,7 @@ public class Cycle3MatchRequestSentStateControllerTest {
     public void shouldTransitonToNoMatchStateForNoMatchResponseWhenNoAttributesArePresent(){
         ArgumentCaptor<NoMatchState> capturedState = ArgumentCaptor.forClass(NoMatchState.class);
         Cycle3MatchRequestSentState state = aCycle3MatchRequestSentState().build();
-        ImmutableList<UserAccountCreationAttribute> userAccountCreationAttributes = ImmutableList.of();
+        List<UserAccountCreationAttribute> userAccountCreationAttributes = emptyList();
         when(transactionsConfigProxy.getUserAccountCreationAttributes("request issuer id")).thenReturn(userAccountCreationAttributes);
         Cycle3MatchRequestSentStateController controller =
                 new Cycle3MatchRequestSentStateController(state, hubEventLogger, stateTransitionAction, null, null, null, transactionsConfigProxy, null, null, null);
